recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {

  a = last(l.tail) + 1
  return last(a)
}